deploy/eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: koorde-cache
  labels:
    name: koorde-cache
    project: koorde-dht
